# Homelab-Icon-Generator

./: .gitignore  CLAUDE.md  Homelab-Icon-Plan.md  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/generator/: colors.py  layouts.py  renderer.py  shapes.py  symbols.py  text_utils.py
app/models/: icon_request.py
app/styles/: base.py  cyberpunk.py  minimal.py  terminal.py
app/utils/: naming.py  validation.py
examples/: sample_icons.json
