[project]
name = "homelab-icon-generator"
version = "0.1.0"
description = "Procedural SVG/PNG icon generator for homelab services"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.1.0",
    "svgwrite>=1.4.3",
]

[project.scripts]
homelab-icons = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []
